[project]
name = "tonecrafter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ruff",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.7.0",
    "numpy"
]
gpu = [
    "torch==1.13.1",
    "torchaudio==0.13.1",
    "numpy<2"
]
[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ]

]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu117", extra = "gpu" },
]

torchaudio = [
    { index = "pytorch-cpu" , extra ="cpu" },
    { index = "pytorch-cu117", extra = "gpu" },
]
torchcodec = [
    { index = "pytorch-cpu" , extra ="cpu" },
#    { index = "pytorch-cu117", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true
