[project]
name = "tonecrafter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ruff",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.7.0",
    "numpy"
]
gpu = [
    "torch",
    "torchaudio",
    "torchcodec",
    "numpy"
]
[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ]

]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "gpu" },
]

torchaudio = [
    { index = "pytorch-cpu" , extra ="cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]
torchcodec = [
    { index = "pytorch-cpu" , extra ="cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
